--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
     "next": "latest",
-    "next-mdx-remote": "^3.0.1",
-    "next-remote-watch": "1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
+    "autoprefixer": "^10.4.8",
+    "gray-matter": "^4.0.2",
+    "next-mdx-remote": "^3.0.1",
+    "next-remote-watch": "1.0.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
