--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-mdx-remote": "^3.0.1",
     "next-remote-watch": "1.0.0",
     "postcss": "^8.4.16",
+    "prismjs": "^1.28.0",
     "tailwindcss": "^3.1.8"
   }
 }
