--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
     "gray-matter": "^4.0.2",
-    "next-mdx-remote": "^3.0.1",
-    "next-remote-watch": "1.0.0",
     "postcss": "^8.4.16",
     "prismjs": "^1.28.0",
+    "react-markdown": "^8.0.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "tailwindcss": "^3.1.8"
   }
 }
