--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "rss": "node ./scripts/rss.js"
   },
   "dependencies": {
     "next": "latest",
@@ -15,7 +16,9 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
+    "node-fetch": "2",
     "postcss": "^8.4.16",
     "prismjs": "^1.28.0",
     "react-markdown": "^8.0.3",
