--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "showdown": "^2.1.0",
     "tailwindcss": "^3.1.8"
   }
 }
