--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "rss": "node ./scripts/rss.js",
+    "postbuild": "yarn rss"
   },
   "dependencies": {
     "next": "latest",
@@ -15,13 +17,16 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
+    "node-fetch": "2",
     "postcss": "^8.4.16",
     "prismjs": "^1.28.0",
     "react-markdown": "^8.0.3",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "showdown": "^2.1.0",
     "tailwindcss": "^3.1.8"
   }
 }
