--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "rss": "node ./scripts/rss.js",
-    "postbuild": "yarn rss"
+    "postbuild": "yarn rss && next-sitemap"
   },
   "dependencies": {
     "next": "latest",
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.8",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
+    "next-sitemap": "^3.1.22",
     "postcss": "^8.4.16",
     "prismjs": "^1.28.0",
     "react-markdown": "^8.0.3",
