--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "rss": "node ./scripts/rss.js",
+    "rss": "node ./scripts/generateRssFeed.js",
     "postbuild": "yarn rss && next-sitemap --config sitemap.config.js",
     "lint": "next lint"
   },
@@ -21,6 +21,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "fast-glob": "^3.2.12",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^4.0.0",
     "next-sitemap": "^3.1.20",
