--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "rss": "node ./scripts/rss.js",
-    "postbuild": "yarn rss && next-sitemap"
+    "rss": "node ./scripts/generateRssFeed.js",
+    "postbuild": "yarn rss && next-sitemap --config sitemap.config.js",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.4",
-    "autoprefixer": "^10.4.8",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "fast-glob": "^3.2.12",
     "feed": "^4.2.2",
-    "gray-matter": "^4.0.2",
-    "next-sitemap": "^3.1.22",
+    "gray-matter": "^4.0.3",
+    "next-mdx-remote": "^4.0.0",
+    "next-sitemap": "^3.1.20",
     "postcss": "^8.4.16",
-    "prismjs": "^1.28.0",
-    "react-markdown": "^8.0.3",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.1",
-    "showdown": "^2.1.0",
+    "prettier": "^2.7.1",
+    "prismjs": "^1.27.0",
     "tailwindcss": "^3.1.8"
   }
 }
